--- a/immersive-website.html
+++ b/immersive-website.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Basic Meta -->
-    <title>Rinzin Dorji | Portfolio | Floating in Space</title>
+    <title>Rinzin Dorji</title>
     <meta name="description" content="Explore the portfolio of Rinzin Dorji, presented as elements floating within a dynamic space environment.">
     <meta name="author" content="Rinzin Dorji">
     <meta name="keywords" content="Rinzin Dorji, portfolio, web developer, space theme, interactive, creative developer, frontend, backend, full stack, Bhutan">
